# TradeIt

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
agent/: agent.py
agent/tools/: get_fear_greed_index.py
agent/utils/: llm_model.py  tracing.py
app/: dependencies.py  exceptions.py  main.py
app/api/: fetch_intraday_prices.py  fetch_prices.py  health.py
app/clients/: alphavantage_client.py  alternativeme_client.py  yahoo_finance_client.py
app/database/: config.py  tables.py
app/market_data/: get_fear_greed.py
app/repositories/: prices_repository.py
app/schemas/: news_schema.py  prices_schema.py
app/services/: get_intraday_prices.py  get_prices.py
migrations/: 001_add_fetched_at.sql  002_change_currency_column.sql
tests/: test_clients.py
